<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/result"
        android:textSize="20sp"
        android:background="#151313"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="5/30"
        android:textSize="40sp"
        android:background="#171616"
        android:textColor="@color/white"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Name"
        android:textSize="30sp"
        android:background="#121111"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Congratulations"
        android:textSize="16sp"
        android:background="#0E0E0E"
        android:textColor="@color/white"
        android:textStyle="bold"
        />



    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/finish"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/rt"
        android:textSize="14sp"
        android:background="#121111"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btn_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_on_background_disabled"
        android:layout_marginTop="5dp"
        android:textColor="#EAC555"
        android:text="@string/rate"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/message"
        android:textSize="14sp"
        android:background="#131313"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/site"
        android:textSize="14sp"
        android:background="#0C0C0C"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</LinearLayout>